src/assets/sass/custom/_devp.scss
.link_target_mail {
  display: inline-block;
  vertical-align: bottom;
  margin-left: 10px;
}
.srv-validation-message {
  color: $brand-danger;
}

.feed-setting .hashtag {
  text-align: left;
}
.theme_outline_light.active,
.theme_outline_light.active:hover {
  color: #212529;
  background-color: #f8f9fa !important;
  border-color: #f8f9fa;
}

.theme_outline_light:hover {
  color: #f8f9fa;
  background: transparent none;
  border-color: #f8f9fa;
}
@media screen and (min-width: 1024px) {
  .lips-hash-tags li {
    display: block;
    width: 25%;
  }
}

.hidden {
  display: none;
}

.span-hidden {
  display: none !important;
}
.user_field {
  padding: 5px;
  border: solid 1px #eee;
}
.btn-transparent {
  background: none;
  border: none;
  cursor: pointer;
}

.btn-color {
  background-color: black;
}
.VspcBtwn {
  width: 100%;
  max-width: 366px;
}
.profile-image-container {
  i {
    color: $pink;
    position: absolute;
    right: 0px;
    bottom: 0px;
    z-index: 9999;
    font-size: large;
  }
}

.hashtag {
  text-align: left;
}

header.main_header .lps_dropdown .lps_dropdown-menu.notification-dropdown {
  overflow-y: auto !important;
  max-height: calc(100vh - 100px);
}
.text-align-center {
  text-align: center;
}
.lps_fig {
  img.img_contain {
    object-fit: contain;
  }
  img.img_cover {
    object-fit: cover;
  }
}
.heightAuto {
  height: auto !important;
}
.lps_list_group span,
.lps_list_group button {
  font-size: 14px;
  font-family: "Dosis", sans-serif !important;
}
.cursor-pointer {
  cursor: pointer;
}
button {
  font-family: "Dosis", sans-serif !important;
}

.custom-ui {
  justify-content: center !important;
  background: #fd3398 !important ;
  box-shadow: 0 20px 75px rgba(0, 0, 0, 0.23) !important;
  color: #fff !important;
  font-size: 15px !important;
}

.close-custom-ui {
  justify-content: center !important;
  box-shadow: 0 20px 75px rgba(0, 0, 0, 0.23) !important;
  color: #fff !important;
  font-size: 15px !important;
}

.react-confirm-alert-button-group {
  justify-content: center !important;
}

.react-confirm-alert-body {
  text-align: center !important;
}

.react-confirm-alert-overlay {
  background: rgba(0, 0, 0, 0.5) !important;
}

.like_logo {
  vertical-align: middle;
}
input.input_modify {
  color: #fff;
}
.lps_text_white .lps_cont_rdo .lps_checkmark:after,
.lps_cont_rdo .lps_checkmark:after {
  background: $brand-primary;
}
.lps_fig.lps_fig_circle {
  width: 60px;
  height: 60px;
}
.lps_f_center {
  align-items: center;
}
.profile-image-container i {
  font-size: 14px;
  background: #fff;
  border-radius: 50px;
  height: 20px;
  width: 20px;
  text-align: center;
  line-height: 20px;
}
.over_none {
  overflow: initial !important;
}
.user_photo_url {
  border-radius: 50%;
}
.copyPara {
  color: #fff;
  margin: 2px 0 0;
}
.onTimeModel .hover_bkgr_fricc.hover_alternate_W .popup_cont .lps_top_imgs img {
  width: 50px;
  transform: rotate(-25deg);
}
.onTimeModel .hover_bkgr_fricc.hover_alternate_W .popup_cont .lps_top_imgs {
  padding: 15px 6px !important;
  border-radius: 8px !important;
}
.onTimeModel .hover_bkgr_fricc.hover_alternate_W .popup_cont h2 {
  font-weight: 400;
  margin-bottom: 20px;
  font-size: 23px;
  margin-top: 20px;
}
.onTimeModel .popup_body p {
  font-size: 19px;
  font-weight: 300;
  margin: 0 0 26px;
}
.onTimeModel .hover_bkgr_fricc.hover_alternate_W .popup_cont h4 {
  font-weight: 400;
  font-size: 16px;
}
.onTimeModel .inline_WText img {
  width: 15px !important;
}
.onTimeModel .popupCloseButton {
  position: inherit !important;
  display: block !important;
  text-align: right !important;
  width: 100% !important;
}
.onTimeModel .hover_bkgr_fricc.hover_alternate_W .popup_cont .popup_body {
  padding: 7px 15px 30px;
}
.onTimeModel .hover_bkgr_fricc.hover_alternate_W .popup_cont {
  border-radius: 0;
}
.model_border .hover_bkgr_fricc .modal-dialog-centered .popup_cont {
  border: 1px solid #fd3398;
}
.textContent article.lps_art a {
  display: block;
  min-height: 365px;
}
.postApproval label.label_modify {
  margin-right: 23px;
}
.pt-75 {
  padding-top: 75px;
}
.inner_form .input_field .input_modify.tagInput:focus {
  border-bottom: 1px solid #f2f2f2 !important;
}
.moreLess a.morelink {
  position: initial;
}
.ifAccess .form_group_modify {
  display: inline-block;
  margin-left: 14px;
  width: 105px;
}
.ifAccess p {
  display: inline-block;
}
.ifAccess .form_group_modify input.input_modify.input_brdrBtnmP {
  border-radius: 0;
  height: 30px;
  padding: 0 0 0 7px;
}
.newButton a {
  width: 335px;
}
.lps_hrSep {
  border-top: 5px solid #fff !important;
}
.notification-item {
  background: #2f2f2f;
  border-left: 8px solid $brand-primary;
  .notification-title, .notification-message{
    color: $brand-primary;
    font-size: 15px !important;
  }
  .notification-close {
    background-color: $brand-primary;
  }
  .notification-message {
      font-weight: 600;
  }
}
.wlcome h3 {
  margin-bottom: 6px;
  font-weight: 300;
}
.comuNitiInner a {
  text-decoration: none;
  line-height: 36px;
  padding: 0em;
}
.lps_bg_gray {
  background-color: #e1e1e1;
}
@media screen and (min-width:991px){
  .footer-menu-list1 .horizantal_coll1 {
    right: 18px !important;
  }
  .desktopVersio{
    width: 335px !important;
  }
  .destkVersion .product_card {
    height: 380px;
  }
}
.removeWhiteLine .list-group-item {
    border: 0 !important;
}
.removeScroll .hash_tag_block {
    height: calc(100vh - 342px);
}
.removeScroll .hash_tag_block::-webkit-scrollbar {
    width: 0;
}
.removeScroll .hash_tag_block::-webkit-scrollbar-track {
    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
}
.removeScroll .hash_tag_block::-webkit-scrollbar-thumb {
  background-color: darkgrey;
  outline: 1px solid slategrey;
}
@media screen and (max-width: 991px) {
  .newButton a {
    width: 100%;
    display: block;
  }
  .W-100P {
    width: 100%;
  }
    .removeScroll .hash_tag_block {
        height: auto;
    }
}
.mb45 {
    margin-bottom: 45px !important;
}
@media screen and (max-width: 768px) {
  .scroll-down .footer-menu-list,
  .scroll-down .footer-menu-list1 {
    -webkit-transform: translate3d(300px, 0, 0);
    transform: translate3d(300px, 0, 0);
  }
  .wlcome{
    h3 {
        font-size: 20px;
    }
    h4 {
        font-size: 16px;
    }
  }
  .ifAccess .form_group_modify {
    display: block;
    margin-left: 0;
    width: 100%;
  }
  .mb30 {
    margin-bottom: 20px !important;
  }
  .startScratch {
      padding: 20px 0;
      height: 100vh !important;
  }
  .comuNitiInner {
    justify-content: initial;
    .onboarding_btm {
      margin-top: 30px;
    }
  }
  .comuNiti {
      justify-content: initial;
      .onboarding_btm {
          margin-top: 30px;
          flex-direction: column;
          align-items: center;
          button {
            width: 100%;
            margin-bottom: 10px;
          }
      }
  }
}
.textBack {
  text-decoration: none;
  line-height: 36px;
}
.placeholder-color::placeholder{
  color: #828282 !important;
}
.textDecor {
  text-decoration: underline;
}
.landingCarouse {
  .product_item_wrp {
    padding: 0;
  }
  h5 {
      margin: 0 !important;
      font-size: 20px;
      color: #fd3398 !important;
      font-weight: 400;
  }
  .owl-carousel {
      margin: 45px 0 12px;
      padding: 0 0 5px;
  }
  .owl-dots{
      margin-top: 80px !important;
  }
  .owl-dots .owl-dot span {
      border: 1px solid #fd3398;
      height: 10px;
      width: 10px;
      background: transparent;
      opacity: 1;
      margin: 5px 4px;
  }
  .owl-dots .owl-dot.active span, .owl-dots .owl-dot:hover span {
      background: #fd3398;
  }
}
.landingContainer {
  max-width: 100%;
}
.text_gary {
  color: #e1e1e1;
}
.lipsFields {
  margin: 50px auto 25px;
  max-width: 460px;
}
.weightAnchor {
  a, button {
    font-weight: 400 !important;
  }
}
.close_follow {
  margin-top: 27px;
}
.startScratch .pos_wrp.onboarding_btm {
  margin-bottom: 75px;
}
.justifyCenter {
  justify-content: center !important;
}
.footIndex {
  z-index: 999;
}
.textContent {
  padding-top: 10px;
  .popup_body.textBody {
    flex-direction: column;
    justify-content: center;
  }
  .reposted_wrps {
    top: 0;
  }
  .modal-dialog-centered {
    min-height: 100% !important;
    align-items: initial;
    .popup_cont {
      min-height: auto !important;
    }
  }
  .hover_bkgr_fricc {
    min-height: 100% !important;
    left: 0;
  }
  .popup_body {
    align-items: center;
    display: flex;
  }
  .popup_body ul.lps_btn_grps {
    width: 100%;
  }
  .removeData{
    flex-direction: column;
  }
}
.changePassword {
  margin-top: 122px !important;
  .input_modify {
    color: #000;
    border-radius: 0;
    border: 0;
    height: 44px;
    padding: 8px;
  }
  .lps_fields {
    margin: 0 0 20px;
    .form_group_modify {
      label{
        margin-bottom: 4px;
        display: block;
      }
    }
  }
  .pos_wrp.onboarding_btm {
    margin-top: 36px !important;
  }
  span.icn_passAbslt_password img {
      width: 25px;
      margin: 0 10px 0 0;
  }
}
.icn_passAbslt_password{
  float: right;
  margin-top: -34px;
}
.removePointer {
  cursor: initial !important;
}
.reposted_wrps + .textContent {
  padding-top: 20px;
}
.lps_bg_txt_white .botderBot:focus {
  border-bottom-color: #fd3398 !important;
}

.community-data-heading{
  color: #fd3398;
}
.pb25 {
  padding-bottom: 25px;
}
.up_arrow_wrp .tags_lip_inline img {
  width: 40px;
  opacity: 0.75;
}
.up_arrow_wrp > img {
  width: 28px;
  opacity: 0.75;
  margin-left: 15px;
}
.appearHere{
  display: flex;
  justify-content: space-between;
  flex-direction: column;
  padding: 0 15px;
  min-height: calc(100vh - 70px);
  .lps_tb_para.wlcome {
    padding: 0 15px;
  }
}
.down_arrow_wrp {
  padding-bottom: 63px;
  text-align: right;
  .inline_img1 .lip_icn {
      width: 20px;
      margin: 0 5px;
      vertical-align: middle;
      opacity: 0.75;
  }
  .lip_icn {
      margin-right: 35px;
      margin-top: 25px;
      width: 28px;
      opacity: 0.75;
  }
}
.commonWidth {
    max-width: 335px;
    margin: 0 auto;
}
.lh30 {
    line-height: 30px !important;
}
.send-button{
  background-color: #E1E1E1;
}
.contactForm {
  input {
    color: #1a1a1a;
  }
  h5 {
    margin: 0;
  }
}
.calcelBtn {
  background: none;
  border: 0;
  padding: 0;
  cursor: pointer;
}
.contact-title{
  margin-bottom: 2px;
}
.fellowersIcon {
    margin-bottom: 26px;
    figure {
        width: 30px !important;
        height: 30px !important;
    }
    a {
        text-transform: initial !important;
        font-size: 16px;
        display: inline-block;
        vertical-align: top;
        line-height: 30px;
    }
}
.lps_xl_view .footer-menu-list {
  right: 20px;
  bottom: initial;
  top: 50%;
  transform: translateY(-50%);
  .ul_list.custom_ul {
    padding: 0;
  }
}

